Fix AW26 multi-placement mockup plans
